{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 31,
  "lineage": "6d72d222-6be5-c4c3-5cf7-c69cf3e6ba8c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e8287309f5df03",
            "arn": "arn:aws:ec2:us-east-1:038715283734:instance/i-0c230c13c2d9818ed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c230c13c2d9818ed",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "diego",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05948cc1dd0bbbaf0",
            "private_dns": "ip-172-31-64-233.ec2.internal",
            "private_ip": "172.31.64.233",
            "public_dns": "ec2-3-215-22-22.compute-1.amazonaws.com",
            "public_ip": "3.215.22.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06959fc603568c301",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-externo-airflow",
              "acesso-ssh-airflow"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-de9fafd1",
            "tags": {
              "Name": "airflow"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0269e702d9789fa87",
              "sg-0bfd95b7cd9321f03"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-externo-airflow",
            "aws_security_group.acesso-ssh-airflow",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-externo-airflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038715283734:security-group/sg-0bfd95b7cd9321f03",
            "description": "acesso-externo-airflow",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0bfd95b7cd9321f03",
            "ingress": [],
            "name": "acesso-externo-airflow",
            "name_prefix": null,
            "owner_id": "038715283734",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "http/https"
            },
            "timeouts": null,
            "vpc_id": "vpc-275ad05d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh-airflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038715283734:security-group/sg-0269e702d9789fa87",
            "description": "acesso-ssh",
            "egress": [],
            "id": "sg-0269e702d9789fa87",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "acesso-ssh-airflow",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "airflow",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "acesso-ssh-airflow",
            "name_prefix": null,
            "owner_id": "038715283734",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-275ad05d"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}